--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Prajwal's",
   "license": "ISC",
   "dependencies": {
-    "nightmare": "^3.0.2",
+    "express": "^4.17.1",
     "puppeteer": "^10.4.0"
   }
 }
